# sqlite-vec-cpp

./: .clang-tidy  .gitignore  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  meson.build  meson_options.txt
.github/workflows/: ci.yml
benchmarks/: batch_distance_benchmark.cpp  distance_benchmark.cpp  filtered_search_benchmark.cpp  hnsw_768d_m_comparison.cpp  hnsw_768d_quick.cpp  hnsw_benchmark.cpp  hnsw_churn_benchmark.cpp  hnsw_ef_sweep_benchmark.cpp  hnsw_engine_comparison_benchmark.cpp  hnsw_m_sweep_benchmark.cpp  meson.build  precision_benchmark.cpp  profile_vec0_query.cpp  quantized_search_benchmark.cpp  rag_pipeline_benchmark.cpp  simple_benchmark.cpp  vec0_ann_benchmark.cpp
benchmarks/archive/: BENCHMARKS_2026-01-05.md
include/sqlite-vec-cpp/: sqlite_vec.hpp  vector_view.hpp
include/sqlite-vec-cpp/concepts/: distance_metric.hpp  meson.build  vector_element.hpp
include/sqlite-vec-cpp/distances/: batch.hpp  cosine.hpp  hamming.hpp  inner_product.hpp  l1.hpp  l2.hpp  meson.build
include/sqlite-vec-cpp/index/: hnsw.hpp  hnsw_node.hpp  hnsw_persistence.hpp  hnsw_quantized.hpp  hnsw_threading.hpp  quantization_snapshot.hpp
include/sqlite-vec-cpp/quantization/: lvq.hpp  rabitq.hpp  store.hpp
include/sqlite-vec-cpp/simd/: avx.hpp  neon.hpp
include/sqlite-vec-cpp/sqlite/: column_defs.hpp  context.hpp  enhanced_functions.hpp  functions.hpp  parsers.hpp  registration.hpp  utility_functions.hpp  value.hpp  vec0_module.hpp  vtab.hpp
include/sqlite-vec-cpp/utils/: array.hpp  error.hpp  float16.hpp  meson.build
packaging/: sqlite-vec-cppConfig.cmake.in  sqlite-vec-cppConfigVersion.cmake.in
scripts/: check-quality.sh
src/: meson.build  sqlite_vec_c_api.cpp
tests/: distance_benchmark_catch.cpp  distance_metrics_test.cpp  meson.build  test_adversarial_vectors.cpp  test_batch_distance.cpp  test_concepts.cpp  test_distances.cpp  test_hnsw.cpp  test_overflow.cpp  test_persistence_fuzz.cpp  test_quantization.cpp  test_sqlite_functions.cpp  test_tls_linkage.cpp  test_tls_linkage_helper.cpp  test_utils.cpp  vector_view_test.cpp
